feat: improve browser support

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -299,7 +299,7 @@
   "Confirm": "تأكيد",
   "Confirm access": "تأكيد الوصول",
   "Confirm Password": "تأكيد كلمة المرور",
-  "Confirm your passkey": "تأكد من مفتاح المرور الخاص بك",
+  "Confirm your passkey or security key": "قم بتأكيد مفتاح المرور أو مفتاح الأمان",
   "Conflict": "تعارض",
   "Connect": "اتصال",
   "Connected": "متصل",
@@ -1231,6 +1231,7 @@
   "they/them": "هم / لهم",
   "This action is unauthorized.": "هذا الإجراء غير مصرح به.",
   "This address is not active anymore": "هذا العنوان لم يعد نشطا بعد الآن",
+  "This browser does not support autofill.": "هذا المتصفح لا يدعم تلقائيًا.",
   "This device": "هذا الجهاز",
   "This email is a test email to check if Monica can send an email to this email address.": "يعد هذا البريد الإلكتروني بمثابة بريد إلكتروني تجريبي للتحقق مما إذا كان بإمكان Monica إرسال بريد إلكتروني إلى عنوان البريد الإلكتروني هذا.",
   "This is a secure area of the application. Please confirm your password before continuing.": "هذه منطقة آمنة للتطبيق. يرجى تأكيد كلمة المرور الخاصة بك قبل المتابعة.",
