--- a/lang/bn.json
+++ b/lang/bn.json
@@ -299,7 +299,7 @@
   "Confirm": "নিশ্চিত করুন",
   "Confirm access": "অ্যাক্সেস নিশ্চিত করুন",
   "Confirm Password": "পাসওয়ার্ড নিশ্চিত করুন",
-  "Confirm your passkey": "আপনার পাসকি নিশ্চিত করুন",
+  "Confirm your passkey or security key": "আপনার পাসকি বা সুরক্ষা কী নিশ্চিত করুন",
   "Conflict": "দ্বন্দ্ব",
   "Connect": "সংযোগ করুন",
   "Connected": "সংযুক্ত",
@@ -1231,6 +1231,7 @@
   "they/them": "তারা/তাদের",
   "This action is unauthorized.": "এই কর্ম অননুমোদিত.",
   "This address is not active anymore": "এই ঠিকানা আর সক্রিয় নয়",
+  "This browser does not support autofill.": "এই ব্রাউজারটি অটোফিলকে সমর্থন করে না।",
   "This device": "এই ডিভাইসটি",
   "This email is a test email to check if Monica can send an email to this email address.": "Monica এই ইমেল ঠিকানায় একটি ইমেল পাঠাতে পারে কিনা তা পরীক্ষা করার জন্য এই ইমেলটি একটি পরীক্ষামূলক ইমেল।",
   "This is a secure area of the application. Please confirm your password before continuing.": "এই অ্যাপ্লিকেশনটি একটি নিরাপদ এলাকা ৷ অব্যাহত আগে আপনার পাসওয়ার্ড নিশ্চিত করুন ৷",
