--- a/lang/ca.json
+++ b/lang/ca.json
@@ -299,7 +299,7 @@
   "Confirm": "Confirmar",
   "Confirm access": "Confirmeu l’accés",
   "Confirm Password": "Confirmar contrasenya",
-  "Confirm your passkey": "Confirmeu la vostra clau de pas",
+  "Confirm your passkey or security key": "Confirmeu la vostra clau de seguretat o de seguretat",
   "Conflict": "Conflicte",
   "Connect": "Connecta’t",
   "Connected": "Connectat",
@@ -1231,6 +1231,7 @@
   "they/them": "ells/elles",
   "This action is unauthorized.": "Aquesta acció no està autoritzada.",
   "This address is not active anymore": "Aquesta adreça ja no està activa",
+  "This browser does not support autofill.": "Aquest navegador no admet automàticament.",
   "This device": "Aquest dispositiu",
   "This email is a test email to check if Monica can send an email to this email address.": "Aquest correu electrònic és un correu electrònic de prova per comprovar si la Monica pot enviar un correu electrònic a aquesta adreça electrònica.",
   "This is a secure area of the application. Please confirm your password before continuing.": "Aquesta és una àrea de seguretat de l’aplicació. Si us plau, confirmeu la vostra contrasenya abans de continuar.",
