--- a/lang/da.json
+++ b/lang/da.json
@@ -299,7 +299,7 @@
   "Confirm": "Bekræft",
   "Confirm access": "Bekræft adgang",
   "Confirm Password": "Bekræft password",
-  "Confirm your passkey": "Bekræft din passkey",
+  "Confirm your passkey or security key": "Bekræft din passkey eller sikkerhedsnøgle",
   "Conflict": "Konflikt",
   "Connect": "Forbinde",
   "Connected": "Forbundet",
@@ -1231,6 +1231,7 @@
   "they/them": "de/dem",
   "This action is unauthorized.": "Denne handling er uautoriseret.",
   "This address is not active anymore": "Denne adresse er ikke længere aktiv",
+  "This browser does not support autofill.": "Denne browser understøtter ikke Autofill.",
   "This device": "Denne enhed",
   "This email is a test email to check if Monica can send an email to this email address.": "Denne e-mail er en test-e-mail for at tjekke, om Monica kan sende en e-mail til denne e-mailadresse.",
   "This is a secure area of the application. Please confirm your password before continuing.": "Dette er et sikkert område af ansøgningen. Bekræft din adgangskode, før du fortsætter.",
