--- a/lang/de.json
+++ b/lang/de.json
@@ -299,7 +299,7 @@
   "Confirm": "Bestätigen",
   "Confirm access": "Zugriff bestätigen",
   "Confirm Password": "Passwort bestätigen",
-  "Confirm your passkey": "Bestätigen Sie Ihren Passkey",
+  "Confirm your passkey or security key": "Bestätigen Sie Ihren Passkey- oder Sicherheitsschlüssel",
   "Conflict": "Konflikt",
   "Connect": "Verbinden",
   "Connected": "In Verbindung gebracht",
@@ -1231,6 +1231,7 @@
   "they/them": "Sie/ihnen",
   "This action is unauthorized.": "Diese Aktion ist nicht autorisiert.",
   "This address is not active anymore": "Diese Adresse ist nicht mehr aktiv",
+  "This browser does not support autofill.": "Dieser Browser unterstützt Autofill nicht.",
   "This device": "Dieses Gerät",
   "This email is a test email to check if Monica can send an email to this email address.": "Bei dieser E-Mail handelt es sich um eine Test-E-Mail, um zu prüfen, ob Monica eine E-Mail an diese E-Mail-Adresse senden kann.",
   "This is a secure area of the application. Please confirm your password before continuing.": "Dies ist ein sicherer Bereich der Anwendung. Bitte geben Sie Ihr Passwort ein, bevor Sie fortfahren.",
