--- a/lang/el.json
+++ b/lang/el.json
@@ -299,7 +299,7 @@
   "Confirm": "Επιβεβαίωση",
   "Confirm access": "Επιβεβαιώστε την πρόσβαση",
   "Confirm Password": "Επιβεβαίωση Κωδικού",
-  "Confirm your passkey": "Επιβεβαιώστε το κλειδί σας",
+  "Confirm your passkey or security key": "Επιβεβαιώστε το κλειδί ή το κλειδί ασφαλείας",
   "Conflict": "σύγκρουση",
   "Connect": "Σύνδεση",
   "Connected": "Συνδεδεμένος",
@@ -1231,6 +1231,7 @@
   "they/them": "αυτοί/αυτοί",
   "This action is unauthorized.": "Αυτή η ενέργεια είναι μη εξουσιοδοτημένη.",
   "This address is not active anymore": "Αυτή η διεύθυνση δεν είναι πλέον ενεργή",
+  "This browser does not support autofill.": "Αυτό το πρόγραμμα περιήγησης δεν υποστηρίζει την αυτόματη.",
   "This device": "Αυτή η συσκευή",
   "This email is a test email to check if Monica can send an email to this email address.": "Αυτό το email είναι ένα δοκιμαστικό email για να ελέγξετε αν η Monica μπορεί να στείλει ένα email σε αυτήν τη διεύθυνση email.",
   "This is a secure area of the application. Please confirm your password before continuing.": "Αυτή είναι μια ασφαλής περιοχή της εφαρμογής. Επιβεβαιώστε τον κωδικό πρόσβασής σας πριν συνεχίσετε.",
