--- a/lang/es.json
+++ b/lang/es.json
@@ -299,7 +299,7 @@
   "Confirm": "Confirmar",
   "Confirm access": "Confirmar el acceso",
   "Confirm Password": "Confirmar contraseña",
-  "Confirm your passkey": "Confirma tu tecla de pass",
+  "Confirm your passkey or security key": "Confirme su clave de passación o clave de seguridad",
   "Conflict": "Conflicto",
   "Connect": "Conectar",
   "Connected": "Conectado",
@@ -1231,6 +1231,7 @@
   "they/them": "ellos/ellos",
   "This action is unauthorized.": "Esta acción no está autorizada.",
   "This address is not active anymore": "Esta dirección ya no está activa",
+  "This browser does not support autofill.": "Este navegador no es compatible con AutOfill.",
   "This device": "Este dispositivo",
   "This email is a test email to check if Monica can send an email to this email address.": "Este correo electrónico es un correo electrónico de prueba para comprobar si Monica puede enviar un correo electrónico a esta dirección de correo electrónico.",
   "This is a secure area of the application. Please confirm your password before continuing.": "Esta es un área segura de la aplicación. Confirme su contraseña antes de continuar.",
