--- a/lang/fr.json
+++ b/lang/fr.json
@@ -299,7 +299,7 @@
   "Confirm": "Confirmer",
   "Confirm access": "Confirmer l’accès",
   "Confirm Password": "Confirmer le mot de passe",
-  "Confirm your passkey": "Confirmez votre clé de sécurté",
+  "Confirm your passkey or security key": "Confirmez votre clé d’accès ou votre clé de sécurité",
   "Conflict": "Conflit",
   "Connect": "Connecter",
   "Connected": "Connecté",
@@ -997,7 +997,7 @@
   "significant other": "moitié",
   "Sign In": "Se connecter",
   "Sign in to your account": "Connectez-vous à votre compte",
-  "Sign in with a passkey": "Connectez-vous avec une clé de sécurité",
+  "Sign in with a passkey": "Connectez-vous avec une clé d’accès",
   "Sign up for an account": "Créer un compte",
   "Sikh": "Sikh",
   "Simply connect with:": "Connectez-vous simplement avec :",
@@ -1231,6 +1231,7 @@
   "they/them": "ils/eux",
   "This action is unauthorized.": "Cette action n’est pas autorisée.",
   "This address is not active anymore": "Cette adresse n’est plus active",
+  "This browser does not support autofill.": "Ce navigateur ne prend pas en charge la saisie automatique.",
   "This device": "Cet appareil",
   "This email is a test email to check if Monica can send an email to this email address.": "Cet e-mail est un e-mail de test pour vérifier si Monica peut envoyer un e-mail à cette adresse e-mail.",
   "This is a secure area of the application. Please confirm your password before continuing.": "Ceci est une zone sécurisée de l’application. Veuillez confirmer votre mot de passe avant de continuer.",
