--- a/lang/he.json
+++ b/lang/he.json
@@ -299,7 +299,7 @@
   "Confirm": "אישור",
   "Confirm access": "אשר את הגישה",
   "Confirm Password": "אימות סיסמה",
-  "Confirm your passkey": "אשר את המפתח שלך",
+  "Confirm your passkey or security key": "אשר את מפתח האבטחה שלך או מפתח האבטחה שלך",
   "Conflict": "סְתִירָה",
   "Connect": "לְחַבֵּר",
   "Connected": "מְחוּבָּר",
@@ -1231,6 +1231,7 @@
   "they/them": "הם/הם",
   "This action is unauthorized.": "פעולה זו אינה מורשית.",
   "This address is not active anymore": "כתובת זו אינה פעילה יותר",
+  "This browser does not support autofill.": "דפדפן זה אינו תומך במילוי אוטומטי.",
   "This device": "התקן זה",
   "This email is a test email to check if Monica can send an email to this email address.": "דוא\"ל זה הוא דוא\"ל בדיקה כדי לבדוק אם Monica יכולה לשלוח דוא\"ל לכתובת דוא\"ל זו.",
   "This is a secure area of the application. Please confirm your password before continuing.": "זהו אזור מאובטח של היישום. אנא אשר את הסיסמה שלך לפני שתמשיך.",
