--- a/lang/hi.json
+++ b/lang/hi.json
@@ -299,7 +299,7 @@
   "Confirm": "पुष्टि करें",
   "Confirm access": "एक्सेस की पुष्टि करें",
   "Confirm Password": "पासवर्ड की पुष्टि करें",
-  "Confirm your passkey": "अपने पासकी की पुष्टि करें",
+  "Confirm your passkey or security key": "अपने पासकी या सुरक्षा कुंजी की पुष्टि करें",
   "Conflict": "संघर्ष",
   "Connect": "जोड़ना",
   "Connected": "जुड़े हुए",
@@ -1231,6 +1231,7 @@
   "they/them": "वे/उन्हें",
   "This action is unauthorized.": "यह कार्रवाई अनधिकृत है.",
   "This address is not active anymore": "यह पता अब सक्रिय नहीं है",
+  "This browser does not support autofill.": "यह ब्राउज़र ऑटोफिल का समर्थन नहीं करता है।",
   "This device": "यह डिवाइस",
   "This email is a test email to check if Monica can send an email to this email address.": "यह ईमेल यह जांचने के लिए एक परीक्षण ईमेल है कि Monica इस ईमेल पते पर ईमेल भेज सकती है या नहीं।",
   "This is a secure area of the application. Please confirm your password before continuing.": "यह आवेदन का एक सुरक्षित क्षेत्र है ।  जारी रखने से पहले अपने पासवर्ड की पुष्टि करें ।",
