--- a/lang/it.json
+++ b/lang/it.json
@@ -299,7 +299,7 @@
   "Confirm": "Conferma",
   "Confirm access": "Conferma l’accesso",
   "Confirm Password": "Conferma Password",
-  "Confirm your passkey": "Conferma il tuo passkey",
+  "Confirm your passkey or security key": "Conferma il tuo passkey o la chiave di sicurezza",
   "Conflict": "Conflitto",
   "Connect": "Collega",
   "Connected": "Collegato",
@@ -1231,6 +1231,7 @@
   "they/them": "loro/loro",
   "This action is unauthorized.": "Questa azione non è autorizzata.",
   "This address is not active anymore": "Questo indirizzo non è più attivo",
+  "This browser does not support autofill.": "Questo browser non supporta AutoFill.",
   "This device": "Questo dispositivo",
   "This email is a test email to check if Monica can send an email to this email address.": "Questa email è un’email di prova per verificare se Monica può inviare un’email a questo indirizzo email.",
   "This is a secure area of the application. Please confirm your password before continuing.": "Questa è un’area protetta dell’applicazione. Per piacere conferma la tua password per continuare.",
