--- a/lang/ja.json
+++ b/lang/ja.json
@@ -299,7 +299,7 @@
   "Confirm": "確認",
   "Confirm access": "アクセスを確認します",
   "Confirm Password": "パスワード（確認用）",
-  "Confirm your passkey": "PassKeyを確認してください",
+  "Confirm your passkey or security key": "パスキーまたはセキュリティキーを確認してください",
   "Conflict": "競合",
   "Connect": "接続",
   "Connected": "接続済み",
@@ -1231,6 +1231,7 @@
   "they/them": "彼ら/彼ら",
   "This action is unauthorized.": "この行為は許可されていません。",
   "This address is not active anymore": "このアドレスはもうアクティブではありません",
+  "This browser does not support autofill.": "このブラウザはAutofillをサポートしません。",
   "This device": "この端末",
   "This email is a test email to check if Monica can send an email to this email address.": "このメールは、Monica がこのメール アドレスにメールを送信できるかどうかを確認するためのテスト メールです。",
   "This is a secure area of the application. Please confirm your password before continuing.": "ここはアプリケーションの安全な領域です。パスワードを入力して続行ください。",
