--- a/lang/ml.json
+++ b/lang/ml.json
@@ -299,7 +299,7 @@
   "Confirm": "സ്ഥിരീകരിക്കുക",
   "Confirm access": "ആക്സസ്സ് സ്ഥിരീകരിക്കുക",
   "Confirm Password": "പാസ്വേഡ് സ്ഥിരീകരിക്കുക",
-  "Confirm your passkey": "നിങ്ങളുടെ പാസ്കീ സ്ഥിരീകരിക്കുക",
+  "Confirm your passkey or security key": "നിങ്ങളുടെ പാസ്കീ അല്ലെങ്കിൽ സുരക്ഷാ കീ സ്ഥിരീകരിക്കുക",
   "Conflict": "സംഘർഷം",
   "Connect": "ബന്ധിപ്പിക്കുക",
   "Connected": "ബന്ധിപ്പിച്ചു",
@@ -1231,6 +1231,7 @@
   "they/them": "അവർ/അവരെ",
   "This action is unauthorized.": "ഈ നടപടി അനധികൃതമാണ്.",
   "This address is not active anymore": "ഈ വിലാസം ഇപ്പോൾ സജീവമല്ല",
+  "This browser does not support autofill.": "ഈ ബ്ര browser സർ ഓട്ടോഫിലിനെ പിന്തുണയ്ക്കുന്നില്ല.",
   "This device": "ഈ ഉപകരണം",
   "This email is a test email to check if Monica can send an email to this email address.": "Monicaയ്ക്ക് ഈ ഇമെയിൽ വിലാസത്തിലേക്ക് ഒരു ഇമെയിൽ അയയ്ക്കാൻ കഴിയുമോ എന്ന് പരിശോധിക്കാനുള്ള ഒരു ടെസ്റ്റ് ഇമെയിൽ ആണ് ഈ ഇമെയിൽ.",
   "This is a secure area of the application. Please confirm your password before continuing.": "ഇത് ആപ്ലിക്കേഷന്റെ ഒരു സുരക്ഷിത മേഖലയാണ്. തുടരുന്നതിന് മുമ്പ് നിങ്ങളുടെ പാസ്‌വേഡ് സ്ഥിരീകരിക്കുക.",
