--- a/lang/nl.json
+++ b/lang/nl.json
@@ -299,7 +299,7 @@
   "Confirm": "Bevestigen",
   "Confirm access": "Bevestig toegang",
   "Confirm Password": "Bevestig wachtwoord",
-  "Confirm your passkey": "Bevestig uw Passkey",
+  "Confirm your passkey or security key": "Bevestig uw Passkey- of beveiligingssleutel",
   "Conflict": "Conflict",
   "Connect": "Aansluiten",
   "Connected": "Verbonden",
@@ -1231,6 +1231,7 @@
   "they/them": "zij/hen",
   "This action is unauthorized.": "Deze actie is niet toegestaan.",
   "This address is not active anymore": "Dit adres is niet meer actief",
+  "This browser does not support autofill.": "Deze browser ondersteunt geen autofill.",
   "This device": "Dit apparaat",
   "This email is a test email to check if Monica can send an email to this email address.": "Deze e-mail is een test-e-mail om te controleren of Monica een e-mail naar dit e-mailadres kan sturen.",
   "This is a secure area of the application. Please confirm your password before continuing.": "Dit is een beveiligd gedeelte van de applicatie. Bevestig je wachtwoord voordat je doorgaat.",
