--- a/lang/nn.json
+++ b/lang/nn.json
@@ -299,7 +299,7 @@
   "Confirm": "Bekrefte",
   "Confirm access": "Bekreft tilgang",
   "Confirm Password": "Bekreft passord",
-  "Confirm your passkey": "Bekreft passordet ditt",
+  "Confirm your passkey or security key": "Bekreft passke- eller sikkerhetsnøkkelen",
   "Conflict": "Konflikt",
   "Connect": "Koble",
   "Connected": "Tilkoblet",
@@ -1231,6 +1231,7 @@
   "they/them": "de/dem",
   "This action is unauthorized.": "Denne handlingen er uautorisert.",
   "This address is not active anymore": "Denne adressen er ikke aktiv lenger",
+  "This browser does not support autofill.": "Denne nettleseren støtter ikke Autofill.",
   "This device": "Denne enheten",
   "This email is a test email to check if Monica can send an email to this email address.": "Denne e-posten er en test-e-post for å sjekke om Monica kan sende en e-post til denne e-postadressen.",
   "This is a secure area of the application. Please confirm your password before continuing.": "Dette er et sikkert område av applikasjonen. Vennligst bekreft passordet ditt før du fortsetter.",
