--- a/lang/pa.json
+++ b/lang/pa.json
@@ -299,7 +299,7 @@
   "Confirm": "ਪੁਸ਼ਟੀ ਕਰੋ",
   "Confirm access": "ਪਹੁੰਚ ਦੀ ਪੁਸ਼ਟੀ ਕਰੋ",
   "Confirm Password": "ਪਾਸਵਰਡ ਪੱਕਾ ਕਰੋ",
-  "Confirm your passkey": "ਆਪਣੀ ਪਾਸਕੀ ਦੀ ਪੁਸ਼ਟੀ ਕਰੋ",
+  "Confirm your passkey or security key": "ਆਪਣੀ ਪਾਸਕੀ ਜਾਂ ਸੁਰੱਖਿਆ ਕੁੰਜੀ ਦੀ ਪੁਸ਼ਟੀ ਕਰੋ",
   "Conflict": "ਟਕਰਾਅ",
   "Connect": "ਜੁੜੋ",
   "Connected": "ਜੁੜਿਆ",
@@ -1231,6 +1231,7 @@
   "they/them": "ਉਹ/ਉਨ੍ਹਾਂ ਨੂੰ",
   "This action is unauthorized.": "ਇਹ ਕਾਰਵਾਈ ਅਣਅਧਿਕਾਰਤ ਹੈ।",
   "This address is not active anymore": "ਇਹ ਪਤਾ ਹੁਣ ਕਿਰਿਆਸ਼ੀਲ ਨਹੀਂ ਹੈ",
+  "This browser does not support autofill.": "ਇਹ ਬਰਾ browser ਜ਼ਰ ਆਟੋਫਿਲ ਦਾ ਸਮਰਥਨ ਨਹੀਂ ਕਰਦਾ.",
   "This device": "ਇਹ ਯੰਤਰ",
   "This email is a test email to check if Monica can send an email to this email address.": "ਇਹ ਈਮੇਲ ਇਹ ਜਾਂਚ ਕਰਨ ਲਈ ਇੱਕ ਟੈਸਟ ਈਮੇਲ ਹੈ ਕਿ ਕੀ Monica ਇਸ ਈਮੇਲ ਪਤੇ ’ਤੇ ਈਮੇਲ ਭੇਜ ਸਕਦੀ ਹੈ।",
   "This is a secure area of the application. Please confirm your password before continuing.": "ਇਹ ਐਪਲੀਕੇਸ਼ਨ ਦਾ ਇੱਕ ਸੁਰੱਖਿਅਤ ਖੇਤਰ ਹੈ। ਜਾਰੀ ਰੱਖਣ ਤੋਂ ਪਹਿਲਾਂ ਕਿਰਪਾ ਕਰਕੇ ਆਪਣੇ ਪਾਸਵਰਡ ਦੀ ਪੁਸ਼ਟੀ ਕਰੋ।",
