--- a/lang/pl.json
+++ b/lang/pl.json
@@ -299,7 +299,7 @@
   "Confirm": "Potwierdź",
   "Confirm access": "Potwierdź dostęp",
   "Confirm Password": "Potwierdź Hasło",
-  "Confirm your passkey": "Potwierdź swojego passkey",
+  "Confirm your passkey or security key": "Potwierdź swój klucz lub klucz bezpieczeństwa",
   "Conflict": "Konflikt",
   "Connect": "Połącz",
   "Connected": "Połączony",
@@ -1231,6 +1231,7 @@
   "they/them": "oni/oni",
   "This action is unauthorized.": "To działanie jest niedozwolone.",
   "This address is not active anymore": "Adres ten nie jest już aktywny",
+  "This browser does not support autofill.": "Ta przeglądarka nie obsługuje AutoFill.",
   "This device": "To urządzenie",
   "This email is a test email to check if Monica can send an email to this email address.": "Ten e-mail jest wiadomością testową mającą na celu sprawdzenie, czy Monica może wysłać wiadomość na ten adres e-mail.",
   "This is a secure area of the application. Please confirm your password before continuing.": "To jest bezpieczny obszar aplikacji. Proszę potwierdzić hasło, aby kontynuować.",
