--- a/lang/pt_BR.json
+++ b/lang/pt_BR.json
@@ -299,7 +299,7 @@
   "Confirm": "Confirmar",
   "Confirm access": "Confirme o acesso",
   "Confirm Password": "Confirmar senha",
-  "Confirm your passkey": "Confirme sua pasta passada",
+  "Confirm your passkey or security key": "Confirme sua chave de passagem ou chave de segurança",
   "Conflict": "Conflito",
   "Connect": "Conectar",
   "Connected": "Conectado",
@@ -1231,6 +1231,7 @@
   "they/them": "eles/eles",
   "This action is unauthorized.": "Esta ação não é autorizada.",
   "This address is not active anymore": "Este endereço não está mais ativo",
+  "This browser does not support autofill.": "Este navegador não suporta preenchimento automático.",
   "This device": "Este dispositivo",
   "This email is a test email to check if Monica can send an email to this email address.": "Este e-mail é um e-mail de teste para verificar se Monica pode enviar um e-mail para este endereço de e-mail.",
   "This is a secure area of the application. Please confirm your password before continuing.": "Esta é uma área segura da aplicação. Por favor, confirme a sua senha antes de continuar.",
