--- a/lang/ro.json
+++ b/lang/ro.json
@@ -299,7 +299,7 @@
   "Confirm": "Confirmă",
   "Confirm access": "Confirmați accesul",
   "Confirm Password": "Confirmare parolă",
-  "Confirm your passkey": "Confirmați -vă pasajul",
+  "Confirm your passkey or security key": "Confirmați -vă pasul sau cheia de securitate",
   "Conflict": "Conflict",
   "Connect": "Conectați-vă",
   "Connected": "Conectat",
@@ -1231,6 +1231,7 @@
   "they/them": "ei/lor",
   "This action is unauthorized.": "Această acțiune este neautorizată.",
   "This address is not active anymore": "Această adresă nu mai este activă",
+  "This browser does not support autofill.": "Acest browser nu acceptă autofill.",
   "This device": "Acest dispozitiv",
   "This email is a test email to check if Monica can send an email to this email address.": "Acest e-mail este un e-mail de test pentru a verifica dacă Monica poate trimite un e-mail la această adresă de e-mail.",
   "This is a secure area of the application. Please confirm your password before continuing.": "Aceasta este o zonă sigură a aplicației. Vă rugăm să confirmați parola înainte de a continua.",
