--- a/lang/ru.json
+++ b/lang/ru.json
@@ -299,7 +299,7 @@
   "Confirm": "Подтвердить",
   "Confirm access": "Подтвердите доступ",
   "Confirm Password": "Подтвердить пароль",
-  "Confirm your passkey": "Подтвердите свой паски",
+  "Confirm your passkey or security key": "Подтвердите свой PassKey или ключ безопасности",
   "Conflict": "Конфликт",
   "Connect": "Подключить",
   "Connected": "Связанный",
@@ -1231,6 +1231,7 @@
   "they/them": "они/их",
   "This action is unauthorized.": "Действие не авторизовано.",
   "This address is not active anymore": "Этот адрес больше не активен",
+  "This browser does not support autofill.": "Этот браузер не поддерживает автозаполнение.",
   "This device": "Это устройство",
   "This email is a test email to check if Monica can send an email to this email address.": "Это электронное письмо является тестовым письмом, чтобы проверить, может ли Monica отправлять электронное письмо на этот адрес электронной почты.",
   "This is a secure area of the application. Please confirm your password before continuing.": "Это защищённая область приложения. Пожалуйста, подтвердите Ваш пароль, прежде чем продолжить.",
