--- a/lang/sv.json
+++ b/lang/sv.json
@@ -299,7 +299,7 @@
   "Confirm": "Bekräfta",
   "Confirm access": "Bekräfta åtkomst",
   "Confirm Password": "Bekräfta lösenordet",
-  "Confirm your passkey": "Bekräfta ditt pass",
+  "Confirm your passkey or security key": "Bekräfta din passnyckel eller säkerhetsnyckel",
   "Conflict": "Konflikt",
   "Connect": "Ansluta",
   "Connected": "Ansluten",
@@ -1231,6 +1231,7 @@
   "they/them": "de/dem",
   "This action is unauthorized.": "Denna åtgärd är obehörig.",
   "This address is not active anymore": "Denna adress är inte aktiv längre",
+  "This browser does not support autofill.": "Denna webbläsare stöder inte autofill.",
   "This device": "Denna enhet",
   "This email is a test email to check if Monica can send an email to this email address.": "Detta e-postmeddelande är ett testmeddelande för att kontrollera om Monica kan skicka ett e-postmeddelande till denna e-postadress.",
   "This is a secure area of the application. Please confirm your password before continuing.": "Detta är ett säkert område av ansökan. Bekräfta ditt lösenord innan du fortsätter.",
