--- a/lang/te.json
+++ b/lang/te.json
@@ -299,7 +299,7 @@
   "Confirm": "నిర్ధారించండి",
   "Confirm access": "ప్రాప్యతను నిర్ధారించండి",
   "Confirm Password": "పాస్‌వర్డ్‌ని నిర్ధారించండి",
-  "Confirm your passkey": "మీ పాస్‌కీని నిర్ధారించండి",
+  "Confirm your passkey or security key": "మీ పాస్‌కీ లేదా భద్రతా కీని నిర్ధారించండి",
   "Conflict": "సంఘర్షణ",
   "Connect": "కనెక్ట్ చేయండి",
   "Connected": "కనెక్ట్ చేయబడింది",
@@ -1231,6 +1231,7 @@
   "they/them": "వారు/వారు",
   "This action is unauthorized.": "ఈ చర్య అనధికారమైనది.",
   "This address is not active anymore": "ఈ చిరునామా ఇప్పుడు సక్రియంగా లేదు",
+  "This browser does not support autofill.": "ఈ బ్రౌజర్ ఆటోఫిల్‌కు మద్దతు ఇవ్వదు.",
   "This device": "ఈ పరికరం",
   "This email is a test email to check if Monica can send an email to this email address.": "Monica ఈ ఇమెయిల్ చిరునామాకు ఇమెయిల్ పంపగలదో లేదో తనిఖీ చేయడానికి ఈ ఇమెయిల్ పరీక్ష ఇమెయిల్.",
   "This is a secure area of the application. Please confirm your password before continuing.": "ఇది అప్లికేషన్ యొక్క సురక్షిత ప్రాంతం. దయచేసి కొనసాగడానికి ముందు మీ పాస్‌వర్డ్‌ను నిర్ధారించండి.",
