--- a/lang/tr.json
+++ b/lang/tr.json
@@ -299,7 +299,7 @@
   "Confirm": "Onayla",
   "Confirm access": "Erişimi onaylayın",
   "Confirm Password": "Parolayı Onayla",
-  "Confirm your passkey": "Passey’inizi onaylayın",
+  "Confirm your passkey or security key": "PassKey veya Güvenlik Anahtarınızı onaylayın",
   "Conflict": "Çakışma",
   "Connect": "Bağlamak",
   "Connected": "Bağlı",
@@ -1231,6 +1231,7 @@
   "they/them": "onlar / onlar",
   "This action is unauthorized.": "Bu işlem izinsizdir.",
   "This address is not active anymore": "Bu adres artık aktif değil",
+  "This browser does not support autofill.": "Bu tarayıcı otomatik doldurmayı desteklemez.",
   "This device": "Bu cihaz",
   "This email is a test email to check if Monica can send an email to this email address.": "Bu e-posta, Monica’nın bu e-posta adresine e-posta gönderip gönderemeyeceğini kontrol etmek için kullanılan bir test e-postasıdır.",
   "This is a secure area of the application. Please confirm your password before continuing.": "Bu uygulamanın güvenli bir alandır. Lütfen devam etmeden önce parolanızı onaylayın.",
