--- a/lang/ur.json
+++ b/lang/ur.json
@@ -299,7 +299,7 @@
   "Confirm": "اس بات کی تصدیق",
   "Confirm access": "رسائی کی تصدیق کریں",
   "Confirm Password": "پاس ورڈ کی توثیق کریں",
-  "Confirm your passkey": "اپنے پاسکی کی تصدیق کریں",
+  "Confirm your passkey or security key": "اپنی پاسکی یا سیکیورٹی کلید کی تصدیق کریں",
   "Conflict": "تنازعہ",
   "Connect": "جڑیں۔",
   "Connected": "جڑا ہوا",
@@ -1231,6 +1231,7 @@
   "they/them": "وہ/انہیں",
   "This action is unauthorized.": "یہ کارروائی غیر مجاز ہے۔",
   "This address is not active anymore": "یہ پتہ اب فعال نہیں ہے۔",
+  "This browser does not support autofill.": "یہ براؤزر آٹو فیل کی حمایت نہیں کرتا ہے۔",
   "This device": "یہ آلہ",
   "This email is a test email to check if Monica can send an email to this email address.": "یہ ای میل ایک آزمائشی ای میل ہے کہ آیا Monica اس ای میل پتے پر ای میل بھیج سکتی ہے۔",
   "This is a secure area of the application. Please confirm your password before continuing.": "یہ ایک محفوظ علاقے کی درخواست ہے. براہ مہربانی تصدیق کریں آپ کے پاس ورڈ جاری رکھنے سے پہلے.",
