--- a/lang/vi.json
+++ b/lang/vi.json
@@ -299,7 +299,7 @@
   "Confirm": "Xác nhận",
   "Confirm access": "Xác nhận quyền truy cập",
   "Confirm Password": "Xác Nhận Mật Khẩu",
-  "Confirm your passkey": "Xác nhận khóa của bạn",
+  "Confirm your passkey or security key": "Xác nhận khóa hoặc khóa bảo mật của bạn",
   "Conflict": "Xung Đột",
   "Connect": "Kết nối",
   "Connected": "Đã kết nối",
@@ -1231,6 +1231,7 @@
   "they/them": "họ / họ",
   "This action is unauthorized.": "Hành động này là trái phép.",
   "This address is not active anymore": "Địa chỉ này không còn hoạt động nữa",
+  "This browser does not support autofill.": "Trình duyệt này không hỗ trợ ô tô.",
   "This device": "Thiết bị hiện tại",
   "This email is a test email to check if Monica can send an email to this email address.": "Email này là email thử nghiệm để kiểm tra xem Monica có thể gửi email đến địa chỉ email này hay không.",
   "This is a secure area of the application. Please confirm your password before continuing.": "Đây là khu vực an toàn của ứng dụng. Vui lòng xác nhận mật khẩu của bạn trước khi tiếp tục.",
