--- a/lang/zh_CN.json
+++ b/lang/zh_CN.json
@@ -299,7 +299,7 @@
   "Confirm": "确认",
   "Confirm access": "确认访问",
   "Confirm Password": "确认密码",
-  "Confirm your passkey": "确认您的Passkey",
+  "Confirm your passkey or security key": "确认您的Passkey或安全密钥",
   "Conflict": "冲突",
   "Connect": "连接",
   "Connected": "连接的",
@@ -1231,6 +1231,7 @@
   "they/them": "他们/他们",
   "This action is unauthorized.": "此操作未经授权。",
   "This address is not active anymore": "该地址不再有效",
+  "This browser does not support autofill.": "该浏览器不支持自动填充。",
   "This device": "当前设备",
   "This email is a test email to check if Monica can send an email to this email address.": "此电子邮件是测试电子邮件，用于检查 Monica 是否可以向此电子邮件地址发送电子邮件。",
   "This is a secure area of the application. Please confirm your password before continuing.": "请在继续之前确认您的密码。",
