--- a/lang/zh_TW.json
+++ b/lang/zh_TW.json
@@ -299,7 +299,7 @@
   "Confirm": "確認",
   "Confirm access": "確認訪問",
   "Confirm Password": "確認密碼",
-  "Confirm your passkey": "確認您的Passkey",
+  "Confirm your passkey or security key": "確認您的Passkey或安全密鑰",
   "Conflict": "衝突",
   "Connect": "連接",
   "Connected": "連接的",
@@ -1231,6 +1231,7 @@
   "they/them": "他們/他們",
   "This action is unauthorized.": "此操作未經授權。",
   "This address is not active anymore": "該地址不再有效",
+  "This browser does not support autofill.": "該瀏覽器不支持自動填充。",
   "This device": "目前裝置",
   "This email is a test email to check if Monica can send an email to this email address.": "此電子郵件是測試電子郵件，用於檢查 Monica 是否可以向此電子郵件地址發送電子郵件。",
   "This is a secure area of the application. Please confirm your password before continuing.": "請在繼續之前確認您的密碼。",
